syntax = "proto3";

package mexamplechain.mexamplemodule;

import "mexamplechain/mexamplemodule/entity_name.proto";

option go_package = "m-example-chain/x/mexamplemodule/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateEntityName (MsgCreateEntityName) returns (MsgCreateEntityNameResponse);
  rpc UpdateEntityName (MsgUpdateEntityName) returns (MsgUpdateEntityNameResponse);
  rpc DeleteEntityName (MsgDeleteEntityName) returns (MsgDeleteEntityNameResponse);
}
message MsgCreateEntityName {
  string creator = 1;
  string field1  = 2;
  int32  field2  = 3;
}

message MsgCreateEntityNameResponse {
  uint64 id = 1;
}

message MsgUpdateEntityName {
  string creator = 1;
  uint64 id      = 2;
  string field1  = 3;
  int32  field2  = 4;
}

message MsgUpdateEntityNameResponse {}

message MsgDeleteEntityName {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteEntityNameResponse {}

